# margarita-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/app/: api.py  config.py  container.py
src/app/v1/: routes.py
src/app/v1/json_rpc/requests/: json_rpc.py
src/app/v1/json_rpc/responses/: get_prompt.py  json_rpc.py  list_prompts.py
src/app/v1/json_rpc/routes/: json_rpc.py
src/core/interfaces/: prompts_repository.py
src/core/mcp/: models.py
src/core/mcp/interfaces/: session_store.py
src/core/mcp/operations/: initialize_operation.py
src/core/prompts/: config.py  models.py  queries.py  renderer.py
src/core/prompts/operations/: render_prompt_operation.py
src/libs/prompts/: repository.py
src/libs/sessions/: in_memory_session_store.py
