[project]
name = "margarita-mcp"
version = "0.1.0"
description = "An MCP service for Margarita prompts."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "fastmcp>=2.14.2",
    "wireup>=2.3.0",
    "httpx>=0.27.0",
    "margarita>=0.2.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
